# linebot

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Controller.cpp  Controller.hpp  Dockerfile  Driver.cpp  LICENSE.md  Move.hpp  README.md  UserInterface.cpp  UserInterface.hpp  architecture.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json  init.sh
.github/workflows/: check-pull-requests.yml  cmake-known-fails.bash  cmake-multi-platform.yml  cmake-single-platform.yml  cmake.yml  comment-on-pull-request.yml
COMM/: CMakeLists.txt  COMM.md
COMM/inc/: Watcher.hpp
COMM/include/COMM/: Connection.hpp  IWatchable.hpp  InterfaceProtocol.hpp  Server.hpp  Socket.hpp  Watcher.hpp  interface_generator.py
COMM/py/interface_generator/: __main__.py  diag.py  generator.py  lexer.py  parser.py  syntax_tree.py  templates.py  tokens.py
COMM/py/interface_generator/example/: CMakeLists.txt  COMM  Driver.cpp  Driver.hpp  Driver.interface  DriverClient.cpp  DriverClient.hpp  DriverServer.cpp  DriverServer.hpp  LOGR  Server.cpp  Socket.hpp  client_main.cpp  server_main.cpp
COMM/py/interface_generator/templates/: client_header.py  client_source.py  server_header.py  server_source.py
COMM/py/interface_generator/test/: interface.txt  test_generator.py  test_lexer.py  test_parser.py
COMM/py/interface_generator/test/example/: Example.interface  ExampleClient.cpp  ExampleClient.hpp  ExampleServer.cpp  ExampleServer.hpp  MissingParamDirection.interface  MissingType.interface  Misspelled.interface  Unterminated.interface
COMM/src/: Connection.cpp  Server.cpp  Socket.cpp  Watcher.cpp  client.cpp  server.cpp
COMM/src/interface_generator/: lexer.py  parser.py  syntax_tree.py  test_lexer.py  test_parser.py  tokens.py
COMM/test/: CMakeLists.txt  client.cpp  server.cpp  socket_testing.py  test_client_connection.py  test_diagnostics.py  test_server_connection.py
COMM/test/Diagnostics/Invalid/: CustomTypeParam.interface  InoutParam.interface  KeywordParamName.interface  Struct.interface
COMM/test/Diagnostics/MissingParamDirection/: FirstParam.interface  SecondParam.interface  SingleParam.interface
COMM/test/Diagnostics/MissingParamName/: FirstParam.interface  SecondParam.interface  SingleParam.interface
COMM/test/Diagnostics/MissingParamType/: FirstParam.interface  SecondParam.interface  SingleParam.interface
COMM/test/Diagnostics/MisspelledWords/: Boll.interface  Doable.interface  Int.interface  Metod.interface
COMM/test/Diagnostics/Unterminated/: Basic.interface  Multiple.interface  WithParams.interface  WithReturn.interface
COMM/test/FT_Connection/: SUT.cpp  test_connection.py
COMM/test/FT_Server/: SUT.cpp  test_server.py
COMM/test/FT_Socket/: SUT.cpp  test_socket.py
COMM/test/FT_Watcher/: SUT.cpp  test_watcher.py
COMM/test/FT_interface_generator/: ExampleImpl.cpp  ExampleImpl.hpp  Example_client_main.cpp  Example_server_main.cpp  test_interface_generator.py
COMM/test/test_interface/: interface_server.cpp
COMM/test/test_server_client/: interface_server.cpp  test_interface_server.py  zpp_bits.hpp
COMM/vscode-interface-support/: CHANGELOG.md  README.md  language-configuration.json  package.json
COMM/vscode-interface-support/syntaxes/: comm-interface.tmLanguage.json
CTRL/: CMakeLists.txt  CTRL.md
CTRL/include/CTRL/: Controller.hpp
CTRL/src/: Controller.cpp
CTRL/test/: CMakeLists.txt  UT_Controller.cpp
DOMN/: CMakeLists.txt  DOMN.md
DOMN/include/DOMN/: Move.hpp
DOMN/test/: CMakeLists.txt
DRVR/: CMakeLists.txt  DRVR.md
DRVR/inc/: Driver.hpp  DriverProc.hpp
DRVR/include/DRVR/: Driver.hpp  Driver.interface  IDriver.hpp
DRVR/src/: Driver.cpp  DriverProc.cpp  Driver_main.cpp  zpp_bits.hpp
DRVR/test/: CMakeLists.txt  FT_Driver.cpp
LOGR/: CMakeLists.txt  LOGR.md
LOGR/inc/: LoggerImpl.hpp
LOGR/include/LOGR/: Exception.hpp  ILogger.hpp  Logger.hpp  Trace.hpp  Warning.hpp  internal.hpp
LOGR/py/: viewer.py
LOGR/src/: Exception.cpp  ILogger.cpp  Logger.cpp  LoggerImpl.cpp  internal.cpp
LOGR/test/: CMakeLists.txt  FT_Logger.cpp  FT_LoggerPerf.cpp  test_Logger.cpp  test_logger_perf.py
MAIN/: CMakeLists.txt  MAIN.md
MAIN/src/: main.cpp
MAIN/test/: CMakeLists.txt
SYNC/: CMakeLists.txt  SYNC.md
SYNC/include/SYNC/: Tick.hpp
SYNC/src/: Tick.cpp
SYNC/test/: CMakeLists.txt  FT_Tick.cpp
UI/: CMakeLists.txt  UI.md
UI/inc/: MoveInput.hpp
UI/include/UI/: UserInterface.hpp
UI/src/: MoveInput.cpp  UserInterface.cpp
UI/test/: CMakeLists.txt  UT_MoveInput.cpp
ci/: check_known_fails.py  ctest.py  gitlab.py  upload_sticky_comment.py
cmake/: cpp.cmake  dependencies.cmake  generate_docs.cmake
docs/: CMakeLists.txt  architecture.md  naming_conventions.md  page_to_namespace_docs.py  testing_guidelines.md
docs/diagrams/: layers.pu  sequence.pu
docs/interfaces/: connection.pu  messages.md  sync_request_loop.pu
docs/interfaces/server_thread/: _participants.pu  async_request.pu  connection.pu
docs/interfaces/single_thread/: request_loop.pu
include/: Controller.hpp  Driver.hpp  Move.hpp  UserInterface.hpp
src/: Controller.cpp  Driver.cpp  UserInterface.cpp  main.cpp
test/: CMakeLists.txt
